samples/_failures_safe/1761505672_a125d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da891933.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_da891933.c:133:12: error: missing terminating " character
  133 |     printf("Entries with
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_da891933.c:133:5: error: expected expression at end of input
  133 |     printf("Entries with
      |     ^~~~~~
./samples/SAFE/__tmp_da891933.c:133:5: error: expected declaration or statement at end of input
